<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="17dp"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_strate"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FC8F04"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:padding="16dp"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="359dp"
        android:layout_height="66dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:textColor="#FC8F04 "
        android:textSize="17sp" />

    <TextView
        android:id="@+id/loginNow"
        android:text="@string/click_aqu_para_hacer_login"
        android:textStyle="bold"
        android:textColor="#FC8F04 "
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>