<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="17dp"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FC8F04 "
        android:padding="16dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"




        />

    <ImageView
        android:layout_marginTop="75dp"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="358dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="#FC8F04 "
        android:textSize="20sp" />

    <TextView

        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="#FC8F04"
        android:gravity="bottom"
        android:textSize="17sp"
        android:text="@string/aun_no_tienes_una_cuenta_registrate_aqu"
        android:textStyle="bold" />

</LinearLayout>